--- a/Portfolio Website - Nick Tam/index.html
+++ b/Portfolio Website - Nick Tam/index.html
@@ -80,7 +80,7 @@
           </button>
 
           <!-- Home page Button 2: For Contact Info-->
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="scrollToSection('contact')">
             Contact Info
           </button>
         </div>
@@ -101,7 +101,7 @@
             src     ="./assets/github.png"
             alt     ="My Github profile"
             class   ="icon"
-            onclick ="location.href='https://github.com/'"
+            onclick ="location.href='https://github.com/Nicktam32?tab=repositories'"
           />
         </div>
 
@@ -152,25 +152,27 @@
           <!-- [About] Section  ->  Personal statement -->
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              <ul>
+                <li> A proactive and independent person, eager to move into Trading industry </li>
+                <li> Have good understanding of programming such as Python, SQL, R </li>
+                <li> Highly analytical, experienced in conducting statistical analysis on large sets of data (1m+)</li>
+                <li> Strong problem-solving skills for optimizing workflows and enhancing efficiency </li>
+                <li> Good communication skills through serving 300+ customers </li>
+              </ul>
             </p>
           </div>
 
         </div>
       </div>
       
-      <!-- Icon: Go Down -->
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
+      <!-- Arrow Icon: Go Down -->
+      <a href="#experience" onclick="scrollToSection('experience')">
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+        />
+      </a>
     </section>
 
 
@@ -357,13 +359,14 @@
         </div>
       </div>
 
-      <!-- Icon: Go Down -->
-      <img
-        src     ="./assets/arrow.png"
-        alt     ="Arrow icon"
-        class   ="icon arrow"
-        onclick ="location.href='./#projects'"
-      />
+      <!-- Arrow Icon: Go Down -->
+      <a href="#projects" onclick="scrollToSection('projects')">
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+        />
+      </a>
     </section>
 
 
@@ -390,7 +393,7 @@
               <!-- Github Button -->
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Nicktam32/Portfolio-Website---Nick-Tam'"
               >
                 Github
               </button>
@@ -465,13 +468,14 @@
         </div>
       </div>
 
-      <!-- Icon: Go Down -->
-      <img
-        src     ="./assets/arrow.png"
-        alt     ="Arrow icon"
-        class   ="icon arrow"
-        onclick ="location.href='./#contact'"
-      />
+      <!-- Arrow Icon: Go Down -->
+      <a href="#contact" onclick="scrollToSection('contact')">
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+        />
+      </a>
     </section>
 
 
