--- a/Portfolio Website - Nick Tam/index.html
+++ b/Portfolio Website - Nick Tam/index.html
@@ -155,9 +155,10 @@
               <ul>
                 <li> A proactive and independent person, eager to move into Trading industry </li>
                 <li> Have good understanding of programming such as Python, SQL, R </li>
-                <li> Highly analytical, experienced in conducting statistical analysis on large sets of data (1m+)</li>
-                <li> Strong problem-solving skills for optimizing workflows and enhancing efficiency </li>
-                <li> Good communication skills through serving 300+ customers </li>
+                <li> Highly analytical, experienced in conducting statistical analysis on large sets of data (1m+) </li>
+                <li> Experienced in data analysis tools such as Tableau and Power BI </li>
+                <li> Skilled in problem-solving, optimizing workflows, and enhancing efficiency </li>
+                <li> Effective communication skills with 300+ customers record </li> 
               </ul>
             </p>
           </div>
@@ -349,7 +350,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3> SEO Marketing </h3>
+                  <h3> Google Analytics </h3>
                   <p>  Intermediate  </p>
                 </div>
               </article>
@@ -398,12 +399,12 @@
                 Github
               </button>
               <!-- Github Button -->
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
 
@@ -423,17 +424,17 @@
               <!-- Github Button -->
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Nicktam32?tab=repositories'"
               >
                 Github
               </button>
               <!-- Github Button -->
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
 
@@ -451,17 +452,17 @@
               <!-- Github Button -->
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Nicktam32?tab=repositories'"
               >
                 Github
               </button>
               <!-- Github Button -->
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
 
           </div>
